MDEV-12136 SELECT COUNT(DISTINCT) returns the wrong value when tmp_table_size is limited

use the correct value for the merge_buffer size, max_in_memory_size
is too small and merge_walk() fails.

also: remove a cast.